src/test/deca/syntax/valid/created/parser/random_10000_TOKENS.deca.res
random_10000_TOKENS.deca:8:1: no viable alternative at input ','
