src/test/deca/syntax/invalid/created/parser/random_10000_TOKENS.deca.res
random_10000_TOKENS.deca:70:136: token recognition error at: '�'
